--- a/styles/Home/Title.css
+++ b/styles/Home/Title.css
@@ -1,5 +1,48 @@
-.canvas {
+.backContainer {
+    position: relative;
     width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    overflow: hidden;
     background-color: #333;
-    height: 300px;
+    animation: animateColor 5s linear infinite;
+}
+@keyframes animateColor {
+    0% {
+        filter: hue-rotate(0deg);
+    }
+    100% {
+        filter: hue-rotate(360deg);
+    }
+}
+.theDot {
+    position: relative;
+    display: block;
+    width: 40px;
+    height: 40px;
+}
+.theDot::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #00ff0a; 
+    box-shadow: 0 0 10px #00ff0a,
+               0 0 20px #00ff0a,
+               0 0 40px #00ff0a,
+               0 0 60px #00ff0a,
+               0 0 80px #00ff0a,
+               0 0 100px #00ff0a;
+    border-radius: 50%;
+    transform: scale(0);
+    transition: 2s;
+}
+.theDot:hover::before {
+    transform: scale(1);
+    transition: 0s;
 }
