--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Oxanium:wght@400;600;700;800&display=swap');
 html,
 body {
   padding: 0;
@@ -5,11 +6,46 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
-/* .row {
+.myfont400 {
+  font-family: 'Oxanium', cursive;
+  font-weight: 400;
+}
+.myfont600 {
+  font-family: 'Oxanium', cursive;
+  font-weight: 600;
+}
+.myfont700 {
+  font-family: 'Oxanium', cursive;
+  font-weight: 700;
+}
+.myfont800 {
+  font-family: 'Oxanium', cursive;
+  font-weight: 800;
+}
+
+.bgColor {
+  background-color: #02040a;
+}
+.myGradient {
+  background: rgb(174,112,236);
+  background: linear-gradient(350deg, rgba(174,112,236,1) 0%, rgba(1,222,190,1) 100%);    
+}
+.myTextGradientFixed {
+  background: rgb(174,112,236);
+  background: linear-gradient(350deg, rgba(174,112,236,1) 0%, rgba(1,222,190,1) 100%);    
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+
+}
+.myBlue {
+  color: #01debe;
+}
+
+.row {
   width: 100%;
   padding-left: 12px;
-} */
-/* .col {
+}
+.col {
   padding-right: 0 !important;
 }
 .col-6 {
@@ -44,5 +80,56 @@ body {
 }
 .col-sm-6 {
   padding-right: 0 !important;
-} */
-
+}
+.fontSize75 {
+  font-size: 75px;
+}
+.fontSize48 {
+  font-size: 48px;
+}
+.fontSize40 {
+  font-size: 40px;
+}
+.fontSize36 {
+  font-size: 36px;
+}
+.fontSize32 {
+  font-size: 32px;
+}
+.fontSize20 {
+  font-size: 20px;
+}
+.fontSize22 {
+  font-size: 22px;
+}
+.fontSize28 {
+  font-size: 28px;
+}
+.fontSize24 {
+  font-size: 24px;
+}
+.fontSize16 {
+  font-size: 16px;
+}
+.fontSize14 {
+  font-size: 14px;
+}
+.centerItem {
+  display: flex;
+  justify-content: center;
+}
+.centerItemV {
+  display: flex;
+  align-items: center;
+}
+.myAlignLeft {
+  display: flex;
+  justify-content: flex-start;
+}
+.myAlignRight {
+  display: flex;
+  justify-content: flex-end;
+}
+.centerText {
+  text-align: center;
+}
