--- a/styles/Home/Skills.css
+++ b/styles/Home/Skills.css
@@ -3,10 +3,11 @@
     height: 100px;
     overflow: hidden;
     position: relative;
+    /* z-index: -1; */
 }
 
 .sliderSContainer {
-    width: 200%; height: 100%;
+    width: 300%; height: 100%;
     display: flex;
     justify-content: space-around;
     gap: 20px;
@@ -14,6 +15,7 @@
     position: absolute;
     animation: logoSlider 10s linear infinite;
     background-color: #02040a;
+    /* z-index: -1; */
 }
 .sliderSContainer:hover {
     animation-play-state: paused;
@@ -31,6 +33,13 @@
     animation: myGradientAnimation 3.5s linear infinite;
 
 }
+.skillLogoAnim {
+    transition: transform 500ms ease-in-out;
+    z-index: 1;
+}
+.skillLogoAnim:hover {
+    transform: scale(1.2);
+}
 
 
 @keyframes logoSlider {
@@ -38,7 +47,7 @@
         left: 0;
     }
     100% {
-        left: -100.75%;
+        left: -151%;
     }
 }
 @keyframes logoSlider2 {
@@ -46,7 +55,7 @@
         left: 0;
     }
     100% {
-        left: -202%;
+        left: -302%;
     }
 }
 
@@ -54,16 +63,13 @@
     0% {
         color: #3acec3;
     }
-    20% {
+    25% {
         color: #60b5cc;
     }
-    40% {
-        color: #7c9ad6;
-    }
-    60% {
+    50% {
         color: #8394d8;
     }
-    80% {
+    75% {
         color: #9e7be4;
     }
     100% {
@@ -78,7 +84,7 @@
 
 @media only screen and (max-width: 800px) {
     .sliderSContainer {
-        width: 400%;
+        width: 600%;
         animation-name: logoSlider2;
         /* gap: 20px; */
     }
