--- a/styles/comps/SkillPopup.css
+++ b/styles/comps/SkillPopup.css
@@ -1,12 +1,50 @@
 
 
 .skillPopup {
-    width: 200px; height: 200px;
+    width: 225px; height: 225px;
     background-color: #ffff;
-    border: red 1px solid;
-    display: block;
+    border: 0px solid;
+    border-radius: 20px;
+    /* display: block; */
     z-index: 10;
-    
+    transform: scale(0);
+    transition: 300ms ease-in-out;
+}
+
+.skillPopupIn {
+    position: relative;
+    width: 220px; height: 220px;
+    background-color: #0D1116;
+    border-radius: 20px;
+}
+
+.skillPopupExit {
+    position: absolute;
+    top: 0;
+    right: 0;
+    background: none;
+    color: white;
+    border: 0px solid;
+    border-radius: 20px;
+    top: 3%;
+    right: 3%;
+    transition: all 200ms ease-in-out;
+}
+.skillPopupExit:hover {
+    background-color: white;
+    color: black;
+}
+
+.skillPopupActive {
+    transform: scale(1);
+    position: absolute;
+    left: 43%;
+}
+
+@media only screen and (max-width: 767px) {
+    .skillPopupActive {
+        left: 30%;
+    }
 }
 
 .buttonDiv {
