--- a/styles/Home/Experience.css
+++ b/styles/Home/Experience.css
@@ -2,7 +2,7 @@
     padding-top: 60px;
 }
 
-@media only screen and (min-width: 1100px) {
+@media only screen and (min-height: 1200px) {
     .experienceSection {
         height: 80vh;
     }
