--- a/styles/contact/Contact.css
+++ b/styles/contact/Contact.css
@@ -12,7 +12,7 @@
     #contactCol2 { order: 1;}
 }
 
-@media only screen and (min-width: 1100px) {
+@media only screen and (min-height: 1200px) {
     .contactSection {
         height: 80vh;
     }
