--- a/styles/Layout/Footer.css
+++ b/styles/Layout/Footer.css
@@ -13,6 +13,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    /* gap: 10px; */
 }
 
 @media only screen and (min-width: 992px) {
