fixed popup pos

--- a/styles/Home/Experience.css
+++ b/styles/Home/Experience.css
@@ -4,6 +4,6 @@
 
 @media only screen and (min-height: 1200px) {
     .experienceSection {
-        height: 80vh;
+        /* height: 80vh; */
     }
 }
