--- a/styles/comps/SkillPopup.css
+++ b/styles/comps/SkillPopup.css
@@ -47,6 +47,12 @@
     }
 }
 
+@media only screen and (max-width: 600px) {
+    .skillPopupActive {
+        left: 15%;
+    }
+}
+
 .buttonDiv {
     width: 100px; height: 100px;
     background-color: green;
