--- a/styles/contact/Contact.css
+++ b/styles/contact/Contact.css
@@ -14,6 +14,6 @@
 
 @media only screen and (min-height: 1200px) {
     .contactSection {
-        height: 80vh;
+        /* height: 80vh; */
     }
 }
