--- a/app/globals.css
+++ b/app/globals.css
@@ -12,8 +12,43 @@ html, body {
     background-color: #02040a;
 }
 
+.cardBackgroundColor {
+    background-color: #0D1116;
+}
+
 .animateColor {
     animation: animateColor 5s linear infinite;
+}
+
+.myTextGradient {
+    animation: myGradientAnimation 3.5s linear infinite;
+}
+
+.myGradient {
+    background: rgb(174,112,236);
+    background: linear-gradient(350deg, rgba(174,112,236,1) 0%, rgba(1,222,190,1) 100%);
+}
+
+@keyframes myGradientAnimation {
+    0% {
+        color: #3acec3;
+    }
+    25% {
+        color: #60b5cc;
+    }
+    50% {
+        color: #8394d8;
+    }
+    75% {
+        color: #9e7be4;
+    }
+    100% {
+        color: #3acec3;
+    }
+}
+
+.myBlue {
+    color: #01debe;
 }
 
 @keyframes animateColor {
