--- a/app/globals.css
+++ b/app/globals.css
@@ -2,7 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-html, body {
+html,
+body {
     margin: 0;
     padding: 0;
 }
@@ -25,23 +26,27 @@ html, body {
 }
 
 .myGradient {
-    background: rgb(174,112,236);
-    background: linear-gradient(350deg, rgba(174,112,236,1) 0%, rgba(1,222,190,1) 100%);
+    background: rgb(174, 112, 236);
+    background: linear-gradient(350deg, rgba(174, 112, 236, 1) 0%, rgba(1, 222, 190, 1) 100%);
 }
 
 @keyframes myGradientAnimation {
     0% {
         color: #3acec3;
     }
+
     25% {
         color: #60b5cc;
     }
+
     50% {
         color: #8394d8;
     }
+
     75% {
         color: #9e7be4;
     }
+
     100% {
         color: #3acec3;
     }
@@ -55,6 +60,7 @@ html, body {
     0% {
         filter: hue-rotate(0deg);
     }
+
     100% {
         filter: hue-rotate(360deg);
     }
